--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="kes.css">
     <link rel="stylesheet" href="ktr.css">
     <link rel="stylesheet" href="khj.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -207,13 +208,25 @@
     </section>
     <section id="kes9"></section>
     <section id="ktr10">
-        <div class="container">
+        <!-- <div class="container">
             <h1>Contact</h1>
-            <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+            <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p> -->
+            <div class="ktr-contact-header">
+                <h2 class="ktr-header-title">CONTACT</h2>
+                <div class="ktr-header-divider">
+                    <div></div>
+                    <div></div>
+                </div>
+                <P class="ktr-header-description">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint
+                    consectetur velit</P>
+            </div>
             <div class="contact-section">
                 <div class="contact-info">
                     <ul>
-                        <li><i>&#128204;</i><span>Address: A108 Adam Street, New York, NY 535022</span></li>
+                        
+                        <i>&#128204;</i>
+                        <li><i class="bi bi-geo-alt"></i>
+                            <span>Address: A108 Adam Street, New York, NY 535022</span></li>
                         <li><i>&#128222;</i><span>Call Us: +1 5589 55488 55</span></li>
                         <li><i>&#128231;</i><span>Email Us: info@example.com</span></li>
                     </ul>
@@ -228,13 +241,113 @@
                         <input type="email" name="email" placeholder="Your Email" required>
                         <input type="text" name="subject" placeholder="Subject">
                         <textarea name="message" placeholder="Message" rows="6"></textarea>
-                        <button type="submit">Send Message</button>
+                        <!-- <button type="submit">Send Message</button> -->
+                        <input type="submit" value="Send your message">
                     </form>
                 </div>
             </div>
         </div>
     </section>
-    <section id="ktr11"></section>
+    <section id="ktr11">
+        <footer>
+            <div class="ktr-footer-newsletter">
+                <h4>Join Our Newsletter</h4>
+                <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
+                <form action="">
+                    <input type="text">
+                    <input type="submit" value="Subscribe">
+                </form>
+                <div class="ktr-footer-newsletter-form"></div>
+            </div>
+            <div class="ktr-footer-container-top">
+                <div class="ktr-footer-container-row">
+                    <div class="ktr-footer-arsha">
+                        <h1 class="ktr-footer-arsha2">ARSHA</h1>
+                        <div class="ktr-footer-arsha3">
+                            <p>A108 Adam Street</p>
+                            <p>New York, NY 535022</p>
+                            <p class="ktr-footer-arsha3-phone"><strong>Phone:</strong><span> +1 5589 55488 55</span></p>
+                            <p class="ktr-footer-arsha3-email"><strong>Email:</strong><span> info@example.com</span></p>
+                        </div>
+                    </div>
+                    <div class="ktr-footer-useful-links">
+                        <h4>Useful Links</h4>
+                        <ul>
+                            <li>
+                                <span>> </span>
+                                <a href="#">Home</a>
+                            </li>
+                            <li>
+                                <span>> </span>
+                                <a href="#">About Us</a>
+                            </li>
+                            <li>
+                                <span>> </span>
+                                <a href="#">services</a>
+                            </li>
+                            <li>
+                                <span>> </span>
+                                <a href="#">Terms of service</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="ktr-footer-our-services">
+                        <h4>Our Services</h4>
+                        <ul>
+                            <li>
+                                <span>> </span>
+                                <a href="#">Web Design</a>
+                            </li>
+                            <li>
+                                <span>> </span>
+                                <a href="#">Web development</a>
+                            </li>
+                            <li>
+                                <span>> </span>
+                                <a href="#">Product Management</a>
+                            </li>
+                            <li>
+                                <span>> </span>
+                                <a href="#">Marketing</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="ktr-follow-us">
+                        <h4>Follow Us</h4>
+                        <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+                        <div class="ktr-footer-social-links">
+                            <a href="#" class="ktr-social-link">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="#" class="ktr-social-link">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="#" class="ktr-social-link">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="#" class="ktr-social-link">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                                    <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="ktr-footer-container-bottom">
+                <p>
+                    ©
+                    <span>Copyright</span>
+                    <strong>Arsha</strong>
+                    <span>All Rights Reserved</span> 
+                </p>
+                <div class="ktr-footer-designed">
+                    Designed by
+                    <span>BootstrapMade</span>
+                </div>
+            </div>
+        </footer>
+    </section>
 </body>
 
 </html>
